--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,7 +561,7 @@ section {
 }
 
 .cta {
-    background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/nature2.jpg") fixed center center;
+    background: linear-gradient(rgba(2, 2, 2, 0.5), rgba(0, 0, 0, 0.5)), url("../img/testimonials-bg.jpg") fixed center center;
     background-size: cover;
     padding: 150px 0;
 }
